--- a/bag.html
+++ b/bag.html
@@ -14,7 +14,7 @@
   <div class="navbar">
     <div class="leftside">
       <div class="logo">
-        <img src="C:\Users\user\Desktop\web\e-commerce project\images\organic-store-logo5.svg" alt="Logo">
+        <img src="C:\Users\user\Desktop\web\ecom\images\organic-store-logo5.svg" alt="Logo">
       </div>
     </div>
     <div class="rightside">
@@ -42,6 +42,7 @@
   </main>
   
   <script src="data.js"></script>
+  <script src="product.js"></script>
   <script src="bag.js"></script>
 </body>
 </html>
