--- a/produtcs.html
+++ b/produtcs.html
@@ -12,7 +12,7 @@
     <div class="navbar">
         <div class="leftside">
             <div class="logo">
-                <img src="C:\Users\user\Desktop\web\e-commerce project\images\organic-store-logo5.svg">
+                <img src="C:\Users\user\Desktop\web\ecom\images\organic-store-logo5.svg">
             </div>
             <div id="left-details">
                 <div class="box">Everything</div>
@@ -25,7 +25,7 @@
                 <div class="box1">About</div>
                 <div class="box1">Contact</div>
                 <div class="box1">
-                 <a href="C:\Users\user\Desktop\web\e-commerce project\bag.html" class="bag-icon">  
+                 <a href="C:\Users\user\Desktop\web\ecom\bag.html" class="bag-icon">  
                    <i class="fa-solid fa-cart-shopping"></i>
                    <span class="bag-count">0</span>
                 </a> 
