--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="navbar">
         <div class="leftside">
             <div class="logo">
-                <img src="C:\Users\user\Desktop\web\ecom\images\organic-store-logo5.svg">
+                <img src=".\images\organic-store-logo5.svg">
             </div>
             <div id="left-details">
                 <div class="box">Everything</div>
@@ -37,11 +37,11 @@
 
     <div class="main-center">
         <div class="center-pic">
-              <img src="C:\Users\user\Desktop\web\ecom\images\organic-products-hero.png">
+              <img src=".\images\organic-products-hero.png">
         
         <div class="center-info">
             <div class="info1"> 
-                <img src="C:\Users\user\Desktop\web\ecom\images\logo-leaf-new.png">
+                <img src=".\images\logo-leaf-new.png">
                 <br>
                 Best Quality Products 
             </div> 
@@ -97,7 +97,7 @@
          </div>
          <div class="best-products">
             <div class="best-p1">
-              <img src="C:\Users\user\Desktop\web\ecom\images\bestp1.jpg">
+              <img src=".\images\bestp1.jpg">
               <div class="common"> Groceries </div>
               <div class="extra">Assorted Coffee</div>
               <div class="rating">
@@ -110,7 +110,7 @@
              <div class="price">Rs 1.</div>
             </div>
             <div class="best-p2">
-               <img src="C:\Users\user\Desktop\web\ecom\images\bestp2.jpg">
+               <img src=".\images\bestp2.jpg">
                <div class="common"> Groceries </div>
                <div class="extra">Hand Sanitizer</div>
                <div class="rating">
@@ -123,7 +123,7 @@
                <div class="price">Rs 1.</div>
             </div>
             <div class="best-p3">
-               <img src="C:\Users\user\Desktop\web\ecom\images\bestp3.jpg">
+               <img src=".\images\bestp3.jpg">
                <div class="common"> Groceries </div>
                <div class="extra">Handpicked Red Chillis</div>
                <div class="rating">
@@ -136,7 +136,7 @@
                <div class="price">Rs 1.</div>
             </div>
             <div class="best-p4">
-               <img src="C:\Users\user\Desktop\web\ecom\images\bestp4.jpg">
+               <img src=".\images\bestp4.jpg">
                <div class="common"> Groceries </div>
                <div class="extra">Natural Extracted Edible Oil</div>
                <div class="rating">
@@ -150,7 +150,7 @@
             </div>
         </div>
 
-       <div class="leaf3"><img src="C:\Users\user\Desktop\web\ecom\images\2nd-leaf.png"></div>
+       <div class="leaf3"><img src=".\images\2nd-leaf.png"></div>
        <div class="more-products">
             <div class="p1">
                 <div class="text1">Farm Fresh Fruits
