--- a/bag.html
+++ b/bag.html
@@ -14,7 +14,7 @@
   <div class="navbar">
     <div class="leftside">
       <div class="logo">
-        <img src="C:\Users\user\Desktop\web\ecom\images\organic-store-logo5.svg" alt="Logo">
+        <img src="./images/organic-store-logo5.svg" alt="Logo">
       </div>
     </div>
     <div class="rightside">
