Describe your changes

--- a/index.html
+++ b/index.html
@@ -152,11 +152,8 @@
 
        <div class="leaf3"><img src="./images/2nd-leaf.png"></div>
        <div class="more-products">
-            <div class="p1">
-                <div class="text1">More products</div>
-            </div>
-
-       </div>
+        <a href="./produtcs.html" class="more-products-btn">More Products</a>
+    </div>
        <script src="data.js"></script>
        <script src="product.js"></script>
 <script src="ecom.js"></script>
